  dlp <= dlm, #6057)
  
- Robusteres erstellen von freien Teasern.

- Centerpage kann eingecheckt werden, auch wenn (ganz) alte Feeds beinhaltet
  sind (#6064).

- Freie Teaser werden immer mit der CP veröffentlicht (#6060).

- ``cp_extra`` Blöcke entfernt: Relateds, Debug

- RSS-Feeds: Domain-Attribut bei <category> optional (#6074).


0.14 (2009-08-21)
-----------------

- ``cp_extra`` Block: dpa-News

- Layout für Printarchivseiten in Volume und Year unterteilt.

- Vorausgewähltes Layout abhängig von der Fläche (#5870).

- Block-Layouts kommen aus einer XML-Datei und stehen nicht mehr direkt im
  Quellcode. Damit stimmen jetzt auch die verwendeten Bilder (#5876).

- Veröffentlichen einer CP mit einem Click (#5661).


0.13 (2009-08-14)
-----------------

- Drop von Inhaltsobjekten in einen Teasermosaik-Platzhalter funktioniert
  wieder (#5972).

- Maximale Anzahl anzuzeigender Einträge im RSS-Block einstellbar (#5964).

- <category> wird in Feeds übernommen (#5967).

- Titel bei cpextras kann überschrieben werden (#5997).

- Quiz-Block enthält jetzt ein xi:include (#5974).

0.12 (2009-08-11)
-----------------

- JSON-Post statt GET mit langer URL (#5868).

- Layout für Printarchivseiten hinzugefügt.

- »Common«-Tab bei Blöcken erreichbar, die sonst keine Bearbeitungsmöglichkeit
  haben (#5955).

- ``cp_extra`` Blöcke: Neu im Ressort, Live-Search, Print Archiv, Relateds,
  Blindblock, Debug

- xi:includes werden jetzt mit dem richtigen Pfad ausgegeben (#5954).

0.11 (2009-08-03)
-----------------

- Weitere Layouts für den Teaserblock: Doppelspalter, Datumsteaser, Kleine
  Teaser (#5829).

0.10.1 (2009-07-28)
-------------------

- CP-Source zum Filtern per Suche angepasst (#4499).

0.10 (2009-07-20)
-----------------

- RSS-Block zeigt Fehler sinnvoller an (#5678).

- Speichern funktioniert zuverlässiger (#5707, #5669).

- Bessere Anzeige von Fehlern im RSS-Block (#5678).

- Modulnamen in der Modulbibliothek werden jetzt übersetzt (u.A. #5677).
